cpdflibwrapper.h



/* Standard page sizes. */
enum cpdf_papersize {
  cpdf_a0portrait,        /* A0 portrait */
  cpdf_a1portrait,        /* A1 portrait */
  cpdf_a2portrait,        /* A2 portrait */
  cpdf_a3portrait,        /* A3 portrait */
  cpdf_a4portrait,        /* A4 portrait */
  cpdf_a5portrait,        /* A5 portrait */
  cpdf_a0landscape,       /* A0 landscape */
  cpdf_a1landscape,       /* A1 landscape */
  cpdf_a2landscape,       /* A2 landscape */
  cpdf_a3landscape,       /* A3 landscape */
  cpdf_a4landscape,       /* A4 landscape */
  cpdf_a5landscape,       /* A5 landscape */
  cpdf_usletterportrait,  /* US Letter portrait */
  cpdf_usletterlandscape, /* US Letter landscape */
  cpdf_uslegalportrait,   /* US Legal portrait */
  cpdf_uslegallandscape   /* US Legal landscape */
};


/* Styles of page label */
enum cpdf_pageLabelStyle {
  cpdf_decimalArabic,    /* 1, 2, 3... */
  cpdf_uppercaseRoman,   /* I, II, III... */
  cpdf_lowercaseRoman,   /* i, ii, iii... */
  cpdf_uppercaseLetters, /* A, B, C... */
  cpdf_lowercaseLetters  /* a, b, c... */
};


/*
 * Add page labels.
 *
 * cpdf_addPageLabels(pdf, style, prefix, offset, range, progress)
 *
 * The prefix is prefix text for each label. The range is the page range the
 * labels apply to. Offset can be used to shift the numbering up or down.
 */
void cpdf_addPageLabels(int, enum cpdf_pageLabelStyle, const char[], int, int,
                        int);


/* cpdf_removePageLabels(pdf) removes the page labels from the document. */
void cpdf_removePageLabels(int);


/*
 * cpdf_getPageLabelStringForPage(pdf, page number) calculates the full label
 * string for a given page, and returns it.
 */
char *cpdf_getPageLabelStringForPage(int, int);


/*
 * Get page label data. Call cpdf_startGetPageLabels to find out how many
 * there are, then use these serial numbers to get the style, prefix, offset
 * and start value (note not a range). Call cpdf_endGetPageLabels to clean up.
 *
 * For example, a document might have five pages of introduction with roman
 * numerals, followed by the rest of the pages in decimal arabic, numbered from
 * one:
 *
 * labelstyle = LowercaseRoman
 * labelprefix = ""
 * startpage = 1
 * startvalue = 1
 *
 * labelstyle = DecimalArabic
 * labelprefix = ""
 * startpage = 6
 * startvalue = 1
 */
int cpdf_startGetPageLabels(int);

enum cpdf_pageLabelStyle cpdf_getPageLabelStyle(int);

char *cpdf_getPageLabelPrefix(int);

int cpdf_getPageLabelOffset(int);

int cpdf_getPageLabelRange(int);

void cpdf_endGetPageLabels();


/* CHAPTER 12. File Attachments */

/*
 * cpdf_attachFile(filename, pdf) attaches a file to the pdf. It is attached
 * at document level.
 */
void cpdf_attachFile(const char[], int);


/*
 * cpdf_attachFileToPage(filename, pdf, pagenumber) attaches a file, given
 * its file name, pdf, and the page number to which it should be attached.
 */
void cpdf_attachFileToPage(const char[], int, int);


/*
 * cpdf_attachFileFromMemory(memory, length, filename, pdf) attaches from
 * memory, just like cpdf_attachFile.
 */
void cpdf_attachFileFromMemory(void *, int, const char[], int);


/*
 * cpdf_attachFileToPageFromMemory(memory, length, filename, pdf, pagenumber)
 * attaches from memory, just like cpdf_attachFileToPage.
 */
void cpdf_attachFileToPageFromMemory(void *, int, const char[], int, int);


/* Remove all page- and document-level attachments from a document. */
void cpdf_removeAttachedFiles(int);


/*
 * List information about attachments. Call cpdf_startGetAttachments(pdf)
 * first, then cpdf_numberGetAttachments to find out how many there are. Then
 * cpdf_getAttachmentName etc. to return each one 0...(n - 1). Finally, call
 * cpdf_endGetAttachments to clean up.
 */
void cpdf_startGetAttachments(int);


/* Get the number of attachments. */
int cpdf_numberGetAttachments(void);


/* Get the name of the attachment. */
char *cpdf_getAttachmentName(int);


/* Gets the page number. 0 = document level. */
int cpdf_getAttachmentPage(int);


/*
 * cpdf_getAttachmentData(serial number, &length) returns a pointer to the
 * data, and its length.
 */
void *cpdf_getAttachmentData(int, int *);


/* Clean up after getting attachments. */
void cpdf_endGetAttachments(void);


/* CHAPTER 13. Images. */

/*
 * Get image data, including resolution at all points of use. Call
 * cpdf_startGetImageResolution(pdf, min_required_resolution) will begin the
 * process of obtaining data on all image uses below min_required_resolution,
 * returning the total number. So, to return all image uses, specify a very
 * high min_required_resolution. Then, call the other functions giving a
 * serial number 0..<total number> - 1, to retrieve the data. Finally, call
 * cpdf_endGetImageResolution to clean up.
 */
int cpdf_startGetImageResolution(int, float);

int cpdf_getImageResolutionPageNumber(int);

char *cpdf_getImageResolutionImageName(int);

int cpdf_getImageResolutionXPixels(int);

int cpdf_getImageResolutionYPixels(int);

double cpdf_getImageResolutionXRes(int);

double cpdf_getImageResolutionYRes(int);

void cpdf_endGetImageResolution(void);


/* CHAPTER 14. Fonts. */

/*
 * Retrieving font information. First, call cpdf_startGetFontInfo(pdf). Now
 * call cpdf_numberFonts to return the number of fonts. For each font, call
 * one or more of cpdf_getFontPage, cpdf_getFontName, cpdf_getFontType, and
 * cpdf_getFontEncoding giving a serial number 0..<number of fonts> - 1 to
 * return information. Finally, call cpdf_endGetFontInfo to clean up.
 */
void cpdf_startGetFontInfo(int);

int cpdf_numberFonts(void);

int cpdf_getFontPage(int);

char *cpdf_getFontName(int);

char *cpdf_getFontType(int);

char *cpdf_getFontEncoding(int);

void cpdf_endGetFontInfo(void);


/* cpdf_removeFonts(pdf) removes all font data from a file. */
void cpdf_removeFonts(int);


/*
 * cpdf_copyFont(from, to, range, pagenumber, fontname) copies the given font
 * from the given page in the 'from' PDF to every page in the 'to' PDF. The
 * new font is stored under its font name.
 */
void cpdf_copyFont(int, int, int, int, const char[]);


/* CHAPTER 15. PDF and JSON */

/* cpdf_outputJSON(filename, parse_content, no_stream_data, pdf) outputs a PDF
 * in JSON format to the given filename. If parse_content is true, page content
 * is parsed. If no_stream_data is true, all stream data is suppressed entirely.
 * */
void cpdf_outputJSON(const char[], int, int, int, int);


/* cpdf_outputJSONMemory(parse_content, no_stream_data, pdf, &length) is like
 * outputJSON, but it writes to a buffer in memory. The length is filled in. */
void *cpdf_outputJSONMemory(int, int, int, int, int *);


/* Load a PDF from a JSON file given its filename. */
int cpdf_fromJSON(const char[]);


/* Load a PDF from a JSON file in memory, given the buffer and its length. */
int cpdf_fromJSONMemory(void *, int);


/* CHAPTER 16. Optional Content Groups */

/* Begin retrieving optional content group names. The serial number 0..<n - 1>
 * is returned. */
int cpdf_startGetOCGList(int pdf);


/* Retrieve an OCG name, given its serial number 0..<n - 1>. */
char *cpdf_OCGListEntry(int i);


/* End retrieval of optional content group names. */
void cpdf_endGetOCGList(void);


/* cpdf_OCGRename(pdf, from, to) will rename an optional content group. */
void cpdf_OCGRename(int, const char[], const char[]);


/* Ensure that every optional content group appears in the OCG order list. */
void cpdf_OCGOrderAll(int);


/* Coalesce optional content groups. For example, if we merge or stamp two
 * files both with an OCG called "Layer 1", we will have two different optional
 * content groups. This function will merge the two into a single optional
 * content group. */
void cpdf_OCGCoalesce(int);


/* CHAPTER 17. Creating New PDFs */

/* cpdf_blankDocument(width, height, num_pages) creates a blank document with
 * pages of the given width (in points), height (in points), and number of
 * pages.
 */
int cpdf_blankDocument(double, double, int);


/*
 * cpdf_blankDocumentPaper(papersize, num_pages) makes a blank document given
 * a page size and number of pages.
 */
int cpdf_blankDocumentPaper(enum cpdf_papersize, int);


/* cpdf_textToPDF(w, h, font, fontsize, filename) typesets a UTF8 text file
 * ragged right on a page of size w * h in points in the given font and font
 * size. */
int cpdf_textToPDF(double, double, int, double, const char[]);


/* cpdf_textToPDF(papersize font, fontsize, filename) typesets a UTF8 text file
 * ragged right on a page of the given size in the given font and font size. */
int cpdf_textToPDFPaper(int, int, double, const char[]);


/* CHAPTER 18. Miscellaneous */

/*
 * cpdf_draft(pdf, range, boxes) removes images on the given pages, replacing
 * them with crossed boxes if 'boxes' is true.
 */
void cpdf_draft(int, int, int);


/*
 * cpdf_removeAllText(pdf, range) removes all text from the given pages in a
 * given document.
 */
void cpdf_removeAllText(int, int);


/* cpdf_blackText(pdf, range) blackens all text on the given pages. */
void cpdf_blackText(int, int);


/* cpdf_blackLines(pdf, range) blackens all lines on the given pages. */
void cpdf_blackLines(int, int);


/* cpdf_blackFills(pdf, range) blackens all fills on the given pages. */
void cpdf_blackFills(int, int);


/*
 * cpdf_thinLines(pdf, range, min_thickness) thickens every line less than
 * min_thickness to min_thickness. Thickness given in points.
 */
void cpdf_thinLines(int, int, double);


/* cpdf_copyId(from, to) copies the /ID from one document to another. */
void cpdf_copyId(int, int);


/* cpdf_removeId(pdf) removes a document's /ID. */
void cpdf_removeId(int);


/* cpdf_setVersion(pdf, version) sets the minor version number of a document. */
void cpdf_setVersion(int, int);


/* cpdf_setFullVersion(pdf, major_version, minor_version) sets the full version
 * number of a document. */
void cpdf_setFullVersion(int, int, int);


/*
 * cpdf_removeDictEntry(pdf, key) removes any dictionary entry with the given
 * key anywhere in the document.
 */
void cpdf_removeDictEntry(int, const char[]);


/* cpdf_removeDictEntrySearch(pdf, key, seachterm) removes any dictionary entry
 * with the given key whose value matches the given search term. */
void cpdf_removeDictEntrySearch(int, const char[], const char[]);


/* cpdf_replaceDictEntry(pdf, key, newvalue) replaces the value associated with
 * the given key. */
void cpdf_replaceDictEntry(int, const char[], const char[]);


/* cpdf_replaceDictEntry(pdf, key, newvalue, searchterm) replaces the value
 * associated with the given key if the existing value matches the search term.
 */
void cpdf_replaceDictEntrySearch(int, const char[], const char[], const char[]);


/* cpdf_getDictEntries(pdf, key, length) returns a JSON array containing any
 * and all values associated with the given key, and fills in its length. */
void *cpdf_getDictEntries(int, const char[], int *retlen);


/*
 * cpdf_removeClipping(pdf, range) removes all clipping from pages in the
 * given range.
 */
void cpdf_removeClipping(int, int);