src/bindings.rs


    pub fn cpdf_addPageLabels(
        arg1: c_int,
        arg2: CpdfPageLabelStyle,
        arg3: *const c_char,
        arg4: c_int,
        arg5: c_int,
        arg6: c_int,
    );
    pub fn cpdf_removePageLabels(arg1: c_int);
    pub fn cpdf_getPageLabelStringForPage(arg1: c_int, arg2: c_int) -> *mut c_char;
    pub fn cpdf_startGetPageLabels(arg1: c_int) -> c_int;
    pub fn cpdf_getPageLabelStyle(arg1: c_int) -> CpdfPageLabelStyle;
    pub fn cpdf_getPageLabelPrefix(arg1: c_int) -> *mut c_char;
    pub fn cpdf_getPageLabelOffset(arg1: c_int) -> c_int;
    pub fn cpdf_getPageLabelRange(arg1: c_int) -> c_int;
    pub fn cpdf_endGetPageLabels();
    pub fn cpdf_attachFile(arg1: *const c_char, arg2: c_int);
    pub fn cpdf_attachFileToPage(arg1: *const c_char, arg2: c_int, arg3: c_int);
    pub fn cpdf_attachFileFromMemory(
        arg1: *mut c_void,
        arg2: c_int,
        arg3: *const c_char,
        arg4: c_int,
    );
    pub fn cpdf_attachFileToPageFromMemory(
        arg1: *mut c_void,
        arg2: c_int,
        arg3: *const c_char,
        arg4: c_int,
        arg5: c_int,
    );
    pub fn cpdf_removeAttachedFiles(arg1: c_int);
    pub fn cpdf_startGetAttachments(arg1: c_int);
    pub fn cpdf_numberGetAttachments() -> c_int;
    pub fn cpdf_getAttachmentName(arg1: c_int) -> *mut c_char;
    pub fn cpdf_getAttachmentPage(arg1: c_int) -> c_int;
    pub fn cpdf_getAttachmentData(arg1: c_int, arg2: *mut c_int) -> *mut c_void;
    pub fn cpdf_endGetAttachments();
    pub fn cpdf_startGetImageResolution(arg1: c_int, arg2: f32) -> c_int;
    pub fn cpdf_getImageResolutionPageNumber(arg1: c_int) -> c_int;
    pub fn cpdf_getImageResolutionImageName(arg1: c_int) -> *mut c_char;
    pub fn cpdf_getImageResolutionXPixels(arg1: c_int) -> c_int;
    pub fn cpdf_getImageResolutionYPixels(arg1: c_int) -> c_int;
    pub fn cpdf_getImageResolutionXRes(arg1: c_int) -> f64;
    pub fn cpdf_getImageResolutionYRes(arg1: c_int) -> f64;
    pub fn cpdf_endGetImageResolution();
    pub fn cpdf_startGetFontInfo(arg1: c_int);
    pub fn cpdf_numberFonts() -> c_int;
    pub fn cpdf_getFontPage(arg1: c_int) -> c_int;
    pub fn cpdf_getFontName(arg1: c_int) -> *mut c_char;
    pub fn cpdf_getFontType(arg1: c_int) -> *mut c_char;
    pub fn cpdf_getFontEncoding(arg1: c_int) -> *mut c_char;
    pub fn cpdf_endGetFontInfo();
    pub fn cpdf_removeFonts(arg1: c_int);
    pub fn cpdf_copyFont(arg1: c_int, arg2: c_int, arg3: c_int, arg4: c_int, arg5: *const c_char);
    pub fn cpdf_outputJSON(arg1: *const c_char, arg2: c_int, arg3: c_int, arg4: c_int, arg5: c_int);
    pub fn cpdf_outputJSONMemory(
        arg1: c_int,
        arg2: c_int,
        arg3: c_int,
        arg4: c_int,
        arg5: *mut c_int,
    ) -> *mut c_void;
    pub fn cpdf_fromJSON(arg1: *const c_char) -> c_int;
    pub fn cpdf_fromJSONMemory(arg1: *mut c_void, arg2: c_int) -> c_int;
    pub fn cpdf_startGetOCGList(pdf: c_int) -> c_int;
    pub fn cpdf_OCGListEntry(i: c_int) -> *mut c_char;
    pub fn cpdf_endGetOCGList();
    pub fn cpdf_OCGRename(arg1: c_int, arg2: *const c_char, arg3: *const c_char);
    pub fn cpdf_OCGOrderAll(arg1: c_int);
    pub fn cpdf_OCGCoalesce(arg1: c_int);
    pub fn cpdf_blankDocument(arg1: f64, arg2: f64, arg3: c_int) -> c_int;
    pub fn cpdf_blankDocumentPaper(arg1: CpdfPaperSize, arg2: c_int) -> c_int;
    pub fn cpdf_textToPDF(
        arg1: f64,
        arg2: f64,
        arg3: c_int,
        arg4: f64,
        arg5: *const c_char,
    ) -> c_int;
    pub fn cpdf_textToPDFPaper(arg1: c_int, arg2: c_int, arg3: f64, arg4: *const c_char) -> c_int;
    pub fn cpdf_draft(arg1: c_int, arg2: c_int, arg3: c_int);
    pub fn cpdf_removeAllText(arg1: c_int, arg2: c_int);
    pub fn cpdf_blackText(arg1: c_int, arg2: c_int);
    pub fn cpdf_blackLines(arg1: c_int, arg2: c_int);
    pub fn cpdf_blackFills(arg1: c_int, arg2: c_int);
    pub fn cpdf_thinLines(arg1: c_int, arg2: c_int, arg3: f64);
    pub fn cpdf_copyId(arg1: c_int, arg2: c_int);
    pub fn cpdf_removeId(arg1: c_int);
    pub fn cpdf_setVersion(arg1: c_int, arg2: c_int);
    pub fn cpdf_setFullVersion(arg1: c_int, arg2: c_int, arg3: c_int);
    pub fn cpdf_removeDictEntry(arg1: c_int, arg2: *const c_char);
    pub fn cpdf_removeDictEntrySearch(arg1: c_int, arg2: *const c_char, arg3: *const c_char);
    pub fn cpdf_replaceDictEntry(arg1: c_int, arg2: *const c_char, arg3: *const c_char);
    pub fn cpdf_replaceDictEntrySearch(
        arg1: c_int,
        arg2: *const c_char,
        arg3: *const c_char,
        arg4: *const c_char,
    );
    pub fn cpdf_getDictEntries(arg1: c_int, arg2: *const c_char, retlen: *mut c_int)
        -> *mut c_void;
    pub fn cpdf_removeClipping(arg1: c_int, arg2: c_int);
}
